# flask-openheart

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DEVELOPMENT.containers.md  DEVELOPMENT.generic.md  DEVELOPMENT.vscode.md  Dockerfile  LICENSE.txt  README.md  compose.util.yaml  compose.yaml  justfile  pyproject.toml
.devcontainer/: devcontainer.json
docs/: conf.py  configuration.rst  examples.rst  index.rst  private_api.rst  public_api.rst  quickstart.rst
examples/: __init__.py  app.py
examples/basic/: __init__.py  app.py
examples/slugging/: __init__.py  app.py  data.py
examples/slugging/templates/: index.html  page.html
flask_openheart/: __init__.py  config.py  controller.py  extension.py  openheart.py
flask_openheart/backend/: __init__.py  backend.py  sqlite.py  valkey.py
flask_openheart/internal/: __init__.py  backend.py  emoji.json  keystore.py  sqlite.py  storage.py
tests/backend/: test_sqlite.py
tests/examples/: test_basic.py  test_slugging.py  util.py
tests/storage/: test_sanitizer.py  test_storage.py
utils/: __init__.py  generate_emoji.py
