[project]
name = "flask-openheart"
version = "0.1.0"
description = "A Flask extension to add support for the OpenHeart protocol"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Woodrow Barlow" }]
requires-python = ">=3.8"
dependencies = ["emoji>=2.14.1", "flask>=2.3", "werkzeug>=2.3.2"]
[project.urls]
Documentation = "https://flask-openheart.readthedocs.io"
Source = "https://github.com/woodrowbarlow/flask-openheart/"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.4",
    "rust-just>=1.40.0",
    "sphinx>=7.1.2",
    "sphinx-autobuild>=2021.3.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "ANN", # we're not using types right now
    "COM812", # redundant/conflicting when using formatter
]
lint.pydocstyle.convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "INP001",
]
"docs/conf.py" = [
    "D",
    "INP001",
]
"conftest.py" = ["D"]
[tool.pytest.ini_options]
testpaths = ["tests"]
